<resources>
    <string name="app_name" translatable="false">Call Recorder</string>
    <string name="email" translatable="false">contact@jupi.online</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- AdMob -->
    <string name="admob_app_id" translatable="false">ca-app-pub-2878230486861983~5653269597</string>
    <string name="admob_homepage_banner_id" translatable="false">ca-app-pub-2878230486861983/6283824981</string>
    <string name="admob_homepage_interstitial_id" translatable="false">ca-app-pub-2878230486861983/4886982838</string>
    <string name="admob_records_banner_id" translatable="false">ca-app-pub-2878230486861983/7704717869</string>
    <string name="admob_records_aftermenuclicked_interstitial_id" translatable="false">ca-app-pub-2878230486861983/8443084466</string>
    <string name="google_play_license_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEArl46P2DUHTlTeSlOGv6OwRWVoTMS2RO+dmw9oWaAXSH/IXeuAHkeIqYZ3RW7O6bF1Uht6V/Z/u+8XjJUNLpycV3t2K00ySAfIMkko/ZKOmI2FJqXAl1wK6AWibb3aTBMsPv8N9j6Q2M0/cvYBiONKTTP5V7Ljnb6J+Y7LEc754kswbD7uFJ/QU4d1kx5KqMjo7vC9xOisrKRnpFSVoTufu/WcjLpGodoFQTnbW7DSY7QvAtmyat88kE6iQo6mG6qeW15Fl3sibdqGsv+WNcbSb8AXevYbqvkRXUBMd6AdLxw3QgPlMZwXLJD0qp5NJ/Hs3259csyMLcgBDqn1cc6ewIDAQAB</string>
    <string name="remove_ads_product_id" translatable="false">remove_ads_1</string>

    <!-- For Menu Items -->
    <string name="homepage">Homepage</string>
    <string name="title_of_records">Records</string>
    <string name="title_of_homepage">Call Recorder</string>
    <string name="contact">Contact</string>

    <!-- For Homepage -->
    <string name="recording_disabled">Recorder Disabled</string>
    <string name="recording_disabled_description">Call Recorder does not record calls, you can activate from below. If your phone has another call recorder app, please deactivate it so that the application can work properly.</string>
    <string name="recording_activated">Recorder Activated</string>
    <string name="recording_activated_description">The call recorder is currently active. Calls are being recorded.</string>
    <string name="activate">Activate</string>
    <string name="disable">Disable</string>

    <!-- For Records -->
    <string name="no_records">No Records</string>

    <!-- For Disable Dialog -->
    <string name="want_to_disable">Do you want to disable it?</string>

    <!-- For Records Item Menu -->
    <string name="call">Call</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <!-- For Delete Dialog -->
    <string name="are_you_sure">Are you sure you want to delete file?</string>

    <!-- For WantToEnable Dialog -->
    <string name="not_recording">Call recorder isn\'t active right now, do you want to active and then call?</string>
    <string name="just_call">Just Call</string>
    <string name="yes_activate">Activate &amp; Call</string>

    <!-- For Record Detected Dialog -->
    <string name="new_record_detected">New record detected</string>
    <string name="go_to_records">Go to records</string>
    <string name="phone_number">Phone Number</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>

    <!-- For Notification -->
    <string name="click_here_to_listen">Click here to listen</string>

    <!-- For Permissions -->
    <string name="give_permission">Give Permission</string>
    <string name="phone">Phone</string>
    <string name="phone_description">We need this permission to be able to catch incoming and outgoing calls.</string>

    <string name="record_your_call">Record Your Call</string>
    <string name="record_your_call_description">We would be grateful if you could give this permission to us, so we can record the conversations from the microphone and present them to you.</string>

    <string name="save_your_records">Save Your Records</string>
    <string name="save_your_records_description">We need this permission to record conversations in your storage, so that you can listen afterwards.</string>
    
    <string name="contact_description">You can give this permission to view the names stored in your phonebook instead of phone numbers when viewing your records in app. You can skip this permission from above.</string>

    <!-- GENERAL -->
    <string name="skip">SKIP</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>




</resources>
