<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/icon_home"
            android:title="@string/homepage" />

        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/icon_history"
            android:title="@string/title_of_records" />

    </group>

    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/icon_mail"
                android:title="@string/email" />
        </menu>
    </item>

</menu>
