<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#fbfcfd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:id="@+id/IVRunOrNot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_deactive"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVRunOrNot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recording_disabled"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:textColor="#747e8f"/>

            <TextView
                android:id="@+id/TVRunOrNotDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recording_disabled_description"
                android:textColor="#747e8f"
                android:textSize="13.8sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center">

            <Button
                android:id="@+id/btnActivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/activate"
                android:textAllCaps="false"
                android:textColor="#5fbc6f"
                android:textSize="15sp"
                android:background="@drawable/enable_button" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>